# techChallenge

./: .env.example  .gitignore  Procfile  README.md  arquitetura_api.drawio  dashboard.py  dashboard.py.bk  metrics.db  pyproject.toml  render.yaml  requirements-api.txt  requirements-dashboard.txt  requirements.txt  run_dashboard.py  settings.json  vercel.json
api/: database.py  db.py  db.py.bk  main.py  models.py  settings.py
api/auth/: auth_handler.py  model.py
api/core/: database.py  settings.py
api/core/auth/: __init__.py  handler.py  token.py
api/logger/: app_log_handler.py  request_log_handler.py  setup.py  sqlite_handler.py
api/models/: books.py  logs.py
api/routes/: __init__.py  auth.py  books.py  books_price-range.py  books_price_range.py  books_top-rated.py  books_top_rated.py  categories.py  health.py  health.py.bk  insights_overview.py  logs.py  ml.py  scraping.py  stats.py  stats_categories.py  stats_overview.py
api/schemas/: auth.py  books.py  logs.py  ml.py  stats.py
dashboard/: app.py  charts.py  data.py  layout.py
ml_model/: model.py
scraping/: __init__.py  books.py  utils.py
tests/: test_my_api.py
