[project]
name = "tech-challenge"
version = "1.0"
description = "Desafio da FIAP"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (==0.112.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib (==1.7.4)",
    "sqlalchemy (==2.0.41)",
    "bs4 (==0.0.2)",
    "python-dotenv (==1.1.1)",
    "pydantic (==2.11.7)",
    "bcrypt (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
