[project]
name = "tech-challenge"
version = "1.0"
description = "Desafio da FIAP"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (==0.112.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib (==1.7.4)",
    "sqlalchemy (==2.0.41)",
    "bs4 (==0.0.2)",
    "python-dotenv (==1.1.1)",
    "pydantic (==2.11.7)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
flake8 = "^7.3.0"
black = "^25.1.0"

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
exclude = ["__pycache__", "migrations", "venv", ".venv"]